<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Yamba</string>
    <string name="titlestatus">更新状态</string>
    <string name="hintText">请输入内容，不可超出140个字</string>
    <string name="update">发送更新</string>
    <string name="textCount">000</string>

    <string name="titlePrefs">配置</string>
    <string name="titleUsername">用户名</string>
    <string name="titlePassword">密码</string>
    <string name="titleApiRoot">API ROOT</string>
    <string name="titleStartService">开启服务</string>
    <string name="titleStopService">停止服务</string>
    <string name="titleTimeline">好友状态</string>
    <string name="titlePurge">清空数据</string>
    <string name="titleStatus">更新状态</string>

    <string name="summaryUsername">请输入用户名</string>
    <string name="summaryPassword">请输入密码</string>
    <string name="summaryApiRoot">请输入服务地址</string>
    <string name="sql1">CREATE TABLE timeline ( _id integer primary key AUTOINCREMENT,created_at integer, source text, txt text, user text );</string>
</resources>
