<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
   <EditTextPreference android:title="@string/titleUsername"
           android:summary="@string/summaryUsername"
           android:key="username">
   </EditTextPreference>
    <!--android:password="true":在输入框，隐藏输入的密码 -->
    <EditTextPreference android:title="@string/titlePassword"
                        android:password="true"
                        android:summary="@string/summaryPassword"
                        android:key="password">
    </EditTextPreference>
    <EditTextPreference android:title="@string/titleApiRoot"
                        android:summary="@string/summaryApiRoot"
                        android:key="apiRoot">
    </EditTextPreference>
</PreferenceScreen>