<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/status_bg"
        >
    <!-- 标题  -->
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:text="@string/titlestatus"
            />
    <!-- 文字字数-->
    <TextView
            android:id="@+id/textCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/textCount"
            android:layout_marginRight="10dp"
            />
    <EditText
            android:id="@+id/status_ed"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:hint="@string/hintText"
            android:background="#cfff"
            android:layout_weight="1"
            android:gravity="top|center_horizontal"
            />
    <Button
        android:id="@+id/status_bt"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/update"
        android:background="@drawable/status_btn"
        />
</LinearLayout>

